--- a/assets/icon/manifest.json
+++ b/assets/icon/manifest.json
@@ -5,9 +5,14 @@
             "src": "/assets/icon/android-chrome-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
+        },
+        {
+            "src": "/assets/icon/android-chrome-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
         }
     ],
-    "theme_color": "#0460d9",
-    "background_color": "#0460d9",
+    "theme_color": "#ffffff",
+    "background_color": "#ffffff",
     "display": "standalone"
 }
