--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Development tools package",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "install": "bundle",
+    "start": "bundle exec jekyll serve"
   },
   "repository": {
     "type": "git",
