Optimize animations and adjust appearance

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Tatu Arvela
 email: contact@tatuarvela.com
-baseurl: '/' # the subpath of your site, e.g. /blog
+baseurl: '' # the subpath of your site, e.g. /blog
 url: '' # the base hostname & protocol for your site, e.g. http://example.com
 permalink: pretty
 
