--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -5,10 +5,12 @@
     "stylelint-selector-bem-pattern"
   ],
   "extends": [
-    "stylelint-config-recommended-scss"
+    "stylelint-config-standard"
   ],
   "rules": {
     "prettier/prettier": true,
+    "at-rule-no-unknown": null,
+    "scss/at-rule-no-unknown": true,
     "plugin/selector-bem-pattern": {
       "preset": "bem"
     }
