--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "install": "bundle",
-    "start": "bundle exec jekyll serve"
+    "start": "bundle exec jekyll serve",
+    "stylelint": "stylelint --fix ./**/*.scss",
+    "prettier": "prettier --write --list-different -- ./_data/*.json ./**/*.html",
+    "markdownlint": "markdownlint --fix ./*.md"
   },
   "repository": {
     "type": "git",
@@ -18,9 +21,10 @@
   },
   "homepage": "https://github.com/TatuArvela/tatuarvela.com#readme",
   "devDependencies": {
-    "prettier": "^1.19.1",
+    "markdownlint-cli": "^0.22.0",
+    "prettier": "^2.0.5",
     "stylelint": "^13.2.0",
-    "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-config-standard": "^20.0.0",
     "stylelint-prettier": "^1.1.2",
     "stylelint-scss": "^3.14.2",
     "stylelint-selector-bem-pattern": "^2.1.0"
