--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,18 +1,20 @@
 {
   "plugins": [
-    "stylelint-prettier",
-    "stylelint-scss",
+    "stylelint-order",
     "stylelint-selector-bem-pattern"
   ],
   "extends": [
-    "stylelint-config-standard"
+    "stylelint-prettier/recommended"
   ],
   "rules": {
-    "prettier/prettier": true,
-    "at-rule-no-unknown": null,
-    "scss/at-rule-no-unknown": true,
+    "order/order": [
+      "custom-properties",
+      "declarations"
+    ],
+    "order/properties-alphabetical-order": true,
     "plugin/selector-bem-pattern": {
       "preset": "bem"
-    }
+    },
+    "prettier/prettier": true
   }
 }
