--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "install": "bundle",
     "start": "bundle exec jekyll serve",
-    "stylelint": "stylelint --fix ./**/*.scss",
+    "stylelint": "stylelint --fix \"./**/*.scss\"",
     "prettier": "prettier --write --list-different -- ./_data/*.json ./**/*.html",
     "markdownlint": "markdownlint --fix ./*.md"
   },
@@ -24,9 +24,10 @@
     "markdownlint-cli": "^0.22.0",
     "prettier": "^2.0.5",
     "stylelint": "^13.2.0",
-    "stylelint-config-standard": "^20.0.0",
+    "stylelint-config-prettier": "^8.0.1",
+    "stylelint-config-sass-guidelines": "^7.0.0",
+    "stylelint-order": "^4.0.0",
     "stylelint-prettier": "^1.1.2",
-    "stylelint-scss": "^3.14.2",
     "stylelint-selector-bem-pattern": "^2.1.0"
   }
 }
