Test full screen video

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tatuarvela.com",
+  "name": "tatuarvela.dev",
   "author": "Tatu Arvela",
   "version": "1.0.0",
   "description": "Development tools package",
