--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Tatu Arvela
-email: contact@tatuarvela.com
+email: contact@tatuarvela.dev
 baseurl: '' # the subpath of your site, e.g. /blog
-url: 'https://tatuarvela.com' # the base hostname & protocol for your site, e.g. http://example.com
+url: 'https://tatuarvela.dev' # the base hostname & protocol for your site, e.g. http://example.com
 permalink: pretty
 
 # Build settings
